# HDLC

./: CMakeLists.txt  HDLC实验思路.md  Readme.md  client.c  client.cc  server.c  server.cc
Demo/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.c
Demo/include/: MathFunctions.h
Demo/math/: CMakeLists.txt  Makefile  MathFunctions.c  cmake_install.cmake  tools.c  tools.h
include/: HDLC_func.h  HDLC_lib.h  frame_structure.h  global.h  signal_lib.h  socket_IPC.h  tools.h
src/: CMakeLists.txt  HDLC_func.c  HDLC_lib.cc  Makefile  cmake_install.cmake  signal_lib.cc  socket_IPC.c  socket_IPC.cc  tools.c  tools.cc
